server/cluster/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: backend
    tier: backend
spec:
  ports:
    # the port that this service should serve on
  - port: 443
    targetPort: 443
  selector:
    app: backend
    tier: backend
