server/cluster/backend-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  tls:
  - secretName: backend-secret
  backend:
    serviceName: backend-svc
    servicePort: 443
