server/cluster/backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  labels:
    app: backend
    tier: backend
spec:
  type: NodePort
  ports:
    # the port that this service should serve on
  - port: 443
    targetPort: 443
  selector:
    app: backend
    tier: backend
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: backend-depl
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: backend
        tier: backend
    spec:
      containers:
      - name: backend
        image: gcr.io/mcc-2016-g13-p2/backend:v1
        ports:
        - containerPort: 443
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress
spec:
  tls:
  - secretName: backend-secret
  backend:
    serviceName: backend-svc
    servicePort: 443
